# ray_tracer

./: CMakeLists.txt
include/: Bitmap.h  Math.h  RayTracer.h  Vector.h
src/: Bitmap.cpp  RayTracer.cpp
tests/: math_test.cpp
